# Akarui

./: .gitignore  .travis.yml  Akarui.cabal  CODE_OF_CONDUCT.md  Faun.cabal  INSTALL.md  LICENSE.md  Manticore.cabal  README.md  Sphinx-AI.cabal  Sphinx.cabal  appveyor.yml
.github/workflows/: ci.yml
Akarui/: Fmt.hs  Network.hs  ShowTxt.hs  Text.hs  Utils.hs
Akarui/FOL/: BinT.hs  Clausal.hs  Domain.hs  FOL.hs  Formula.hs  FormulaSet.hs  KnowledgeBase.hs  LiteralSign.hs  MarkovLogic.hs  Predicate.hs  PrettyPrint.hs  QuanT.hs  RuleType.hs  SetClause.hs  Symbols.hs  Term.hs  WalkSAT.hs
Akarui/MVL/: Fuzzy.hs  Fuzzy2.hs  FuzzyLogic.hs  FuzzySet.hs  Truth.hs
Akarui/Parser/: Bool.hs  Core.hs  FOL.hs  FuzzySet.hs  LogicOps.hs  NamedFuzzy.hs  Numbers.hs  Probability.hs  Term.hs
Faun/: BinT.hs  Clausal.hs  Clause.hs  Domain.hs  FOL.hs  Fmt.hs  Formula.hs  FormulaSet.hs  Fuzzy.hs  FuzzyLogic.hs  FuzzySet.hs  KB.hs  KnowledgeBase.hs  LiteralSign.hs  MarkovLogic.hs  NamedFuzzy.hs  Network.hs  ParseProbability.hs  Parser.hs  Predicate.hs  PrettyPrint.hs  QualT.hs  QuanT.hs  RuleType.hs  SetClause.hs  ShowTxt.hs  Symbols.hs  Term.hs  Text.hs  Utils.hs  WalkSAT.hs
Faun/FOL/: BinT.hs  Clausal.hs  Domain.hs  FOL.hs  Formula.hs  FormulaSet.hs  KnowledgeBase.hs  LiteralSign.hs  MarkovLogic.hs  Predicate.hs  PrettyPrint.hs  QuanT.hs  RuleType.hs  SetClause.hs  Symbols.hs  Term.hs  WalkSAT.hs
Faun/FOL/Parser/: Bool.hs  Core.hs  FOL.hs  FuzzySet.hs  LogicOps.hs  NamedFuzzy.hs  Numbers.hs  Probability.hs  Term.hs
Faun/MVL/: Fuzzy.hs  Fuzzy2.hs  FuzzyLogic.hs  FuzzySet.hs  NamedFuzzy.hs  Truth.hs
Faun/Parser/: Bool.hs  Core.hs  FOL.hs  FuzzySet.hs  LogicOps.hs  NamedFuzzy.hs  Numbers.hs  Probability.hs  Term.hs
Manticore/: FOL.hs  Fmt.hs  Formula.hs  KB.hs  MLN.hs  MarkovLogic.hs  MaxWalkSAT.hs  Network.hs  Parser.hs  Predicate.hs  Symbols.hs  Term.hs  Text.hs  TypedObj.hs  Utils.hs  WalkSAT.hs
Sphinx/: Clause.hs  FOL.hs  Fmt.hs  Formula.hs  KB.hs  MLN.hs  MarkovLogic.hs  MaxWalkSAT.hs  Network.hs  Parser.hs  Predicate.hs  Symbols.hs  Term.hs  Text.hs  TypedObj.hs  Utils.hs  WalkSAT.hs
benchmarks/: ExactInference.hs  Makefile
tests/: FOLSpec.hs  KBSpec.hs  MLNSpec.hs  PredicateSpec.hs  PropLogic.hs  PropLogicSpec.hs  Properties.hs  TermSpec.hs  TextGen.hs
