name:           Faun
version:        0.1.0.0
synopsis:       Hybrid logic + probabilistic machine learning library
license:        MIT
license-file:   LICENSE.md
author:         Philippe Desjardins-Proulx <philippe.d.proulx@gmail.com>
maintainer:     Philippe Desjardins-Proulx philippe.d.proulx@gmail.com
category:       AI, Machine Learning, Logic, Statistics
build-type:     Simple
cabal-version:  >= 1.18
description:
  A library for probabilistic logic (or statistical relational) learning
  algorithms. See http://phdp.github.io/posts/2015-07-13-srl-code.html
  for a detailed example.

library
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  default-extensions: OverloadedStrings
  exposed-modules:
    Faun.Formula
    Faun.FOL
    Faun.Predicate
    Faun.Term
    Faun.Symbols
    Faun.BinT
    Faun.QualT
    Faun.ShowTxt
    Faun.FuzzySet
    Faun.Network
    Faun.FormulaSet
    Faun.MarkovLogic
    Faun.Parser.Core
    Faun.Parser.FOL
    Faun.Parser.Term
    Faun.Parser.FuzzySet
    Faun.Parser.LogicOps
    Faun.Parser.Probability
  other-modules:
    Faun.Text
    Faun.Utils
  build-depends:
    base >= 4.6,
    containers,
    parsec >= 3.1.2,
    text,
    transformers,
    random

test-suite tests
  default-language: Haskell2010
  -- Supress orphan warnings to allow 'Arbitrary' instance def:
  ghc-options: -Wall -fno-warn-orphans
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: Properties.hs
  other-modules:
    FOLSpec
    TermSpec
    PredicateSpec
    TextGen
  build-depends:
    base >= 4.6,
    containers,
    QuickCheck >= 2.7,
    test-framework-quickcheck2,
    text,
    Faun,
    random

source-repository head
  type:       git
  location:   git://github.com/PhDP/Faun.git
