cabal-version:  2.2
name:           Faun
version:        0.2.0.0
synopsis:       Hybrid logic + probabilistic machine learning library
license:        Apache-2.0
license-file:   LICENSE.md
author:         Philippe Desjardins-Proulx <philippe.d.proulx@gmail.com>
maintainer:     Philippe Desjardins-Proulx philippe.d.proulx@gmail.com
category:       AI, Machine Learning, Logic, Statistics
build-type:     Simple
description:
  A library for probabilistic logic (or statistical relational) learning
  algorithms. See http://phdp.github.io/posts/2015-07-13-srl-code.html
  for a detailed example.

library
  default-language: Haskell2010
  ghc-options: -O2 -Wall -fno-warn-orphans
  default-extensions: OverloadedStrings
  exposed-modules:
    Faun.Formula
    Faun.FOL
    Faun.Predicate
    Faun.Term
    Faun.Symbols
    Faun.BinT
    Faun.QuanT
    Faun.ShowTxt
    Faun.PrettyPrint
    Faun.FuzzySet
    Faun.NamedFuzzy
    Faun.FuzzyLogic
    Faun.Network
    Faun.FormulaSet
    Faun.MarkovLogic
    Faun.WalkSAT
    Faun.Parser.Core
    Faun.Parser.FOL
    Faun.Parser.Term
    Faun.Parser.FuzzySet
    Faun.Parser.NamedFuzzy
    Faun.Parser.LogicOps
    Faun.Parser.Probability
    Faun.Parser.Numbers
    Faun.Parser.Bool
  other-modules:
    Faun.Text
    Faun.Utils
  build-depends:
    base >= 4.6 && < 4.13,
    containers,
    parsec >= 3.1.2,
    text,
    transformers,
    random

test-suite tests
  default-language: Haskell2010
  -- Supress orphan warnings to allow 'Arbitrary' instance def:
  ghc-options: -Wall -fno-warn-orphans
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: Properties.hs
  other-modules:
    FOLSpec
    TermSpec
    PredicateSpec
    TextGen
  build-depends:
    base >= 4.6 && < 4.13,
    containers,
    QuickCheck >= 2.7,
    test-framework-quickcheck2,
    text,
    Faun,
    random

source-repository head
  type:       git
  location:   git://github.com/PhDP/Faun.git
