name:           Manticore
version:        0.1.0.0
synopsis:       Hybrid logic + probabilistic machine learning library
license:        MIT
license-file:   LICENSE.md
author:         Philippe Desjardins-Proulx <philippe.d.proulx@gmail.com>
maintainer:     Philippe Desjardins-Proulx philippe.d.proulx@gmail.com
category:       AI, Machine Learning, Logic, Statistics
build-type:     Simple
cabal-version:  >= 1.18
description:
  A library for probabilistic logic ("statistical relational") learning
  algorithms.

library
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  exposed-modules:
    Manticore.Formula
    Manticore.FOL
    Manticore.Predicate
    Manticore.Term
    Manticore.MLN
    Manticore.WalkSAT
    Manticore.Parser
    Manticore.Symbols
    Manticore.KB
    Manticore.Network
    Manticore.Fmt
  other-modules:
    Manticore.Text
  build-depends:
    base >= 4.6,
    containers,
    parsec,
    text,
    transformers,
    random

test-suite tests
  default-language: Haskell2010
  -- Supress orphan warnings to allow 'Arbitrary' instance def:
  ghc-options: -Wall -fno-warn-orphans
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: Properties.hs
  other-modules:
    PropLogicSpec
    FOLSpec
    TermSpec
    PredicateSpec
    MLNSpec
    KBSpec
    TextGen
  build-depends:
    base >= 4.6,
    containers,
    QuickCheck >= 2.7,
    test-framework-quickcheck2,
    Manticore,
    random

source-repository head
  type:       git
  location:   git://github.com/PhDP/Manticore.git
