name:                Sphinx
version:             0.1.0.0
synopsis:            Hybrid logic + probabilistic machine learning library
description:
license:             MIT
license-file:        LICENSE.md
author:              Philippe Desjardins-Proulx <philippe.d.proulx@gmail.com>
maintainer:          Philippe Desjardins-Proulx philippe.d.proulx@gmail.com
category:            Math
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language: Haskell2010
  ghc-options: -O2 -Wall
  exposed-modules:
    Sphinx.Formula
    Sphinx.FOL
    Sphinx.Parser
    Sphinx.MLN
    Sphinx.MaxWalkSAT
  build-depends:
    base >= 4.6,
    containers,
    parsec,
    text,
    transformers

test-suite tests
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: tests
  type: exitcode-stdio-1.0
  main-is: Properties.hs
  build-depends:
    base >= 4.6,
    Sphinx,
    QuickCheck >= 2.7,
    test-framework-quickcheck2

source-repository head
  type:       git
  location:   git://github.com/PhDP/Sphinx.git
